Archive2/99/4e86cbce52e9d2/output
main.cpp: In function 'constexpr int f(int)':
main.cpp:1:57: error: call to non-constexpr function 'void* operator new(long unsigned int)'
 constexpr int f(int a) { return a && !a ? a : *new int(0); }
                                                         ^
