Archive2/99/4e86cbce52e9d2/main.cpp
constexpr int f(int a) { return a && !a ? a : *new int(0); }